# search_engine

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  converter_json.h  inverted_index.h  search_server.h
json_files/: answers.json  config.json  requests.json
json_files/json_files/: answers.json  config.json  requests.json
resources/: 1.txt  file001.txt  file002.txt  file003.txt  file004.txt
src/: CMakeLists.txt  config.h.in  converter_json.cpp  inverted_index.cpp  main.cpp  search_server.cpp
tests/: CMakeLists.txt
tests/test_inverted_index/: CMakeLists.txt  test_invert_index.cpp
tests/test_search_server/: CMakeLists.txt  test_search_server.cpp
